--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: salon-mongo
     restart: always
     ports:
-      - "27017:27017"
+      - "27018:27017" # Cambiado el puerto externo a 27018
     volumes:
       - mongo-data:/data/db
 
